additonal_styles.css
@media screen and (min-width: 48em) {
  /* Desktop */
  .site-footer .widget-column.footer-widget-1, .site-footer .widget-column.footer-widget-2 {
    display: block;
    width: 100%;
    clear: both; }

  /* Direction provided by WCAA */
  #colophon {
    text-align: center;
    padding-top: 1em;
    padding-bottom: 0; }

  #colophon .wcb_widget_sponsors {
    max-width: 1170px;
    padding: 1em;
    background: #fff;
    margin: 0 auto;
    text-align: center; }

  #colophon .wcb_widget_sponsors .widget-title {
    color: #fff;
    position: absolute;
    margin-top: -100px;
    width: 100%;
    left: 0;
    text-align: center; }

  #colophon .wcb_widget_sponsors .sponsor-level {
    width: 33%;
    display: inline-block;
    padding: 0 1em;
    vertical-align: top; }

  #colophon .sponsor-level-title {
    margin-bottom: 1em;
    text-transform: uppercase;
    font-size: 16px;
    color: #777;
    letter-spacing: 2px; }

  #colophon .sponsor-logo {
    margin: 20px 0;
    padding: 10px 25px;
    display: block; }

  #colophon .sponsor-logo img {
    max-height: 75px;
    width: auto; } }
/* style added for DM */
.wcpt-session-speakers {
  display: block;
  font-style: italic; }

.entry-content a.pseudobutton {
  background-color: #222;
  border: 0;
  -webkit-border-radius: 2px;
  border-radius: 2px;
  -webkit-box-shadow: none;
  box-shadow: none;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-size: .875rem;
  font-weight: 800;
  line-height: 1;
  padding: 1em 2em;
  text-shadow: none;
  -webkit-transition: background .2s;
  transition: background .2s; }

h1.site-title {
  font-size: 3rem; }

body.page:not(.twentyseventeen-front-page) h1.entry-title {
  font-size: 1.8rem; }

.admin-bar.twentyseventeen-front-page.has-header-image .custom-header-media, .admin-bar.twentyseventeen-front-page.has-header-video .custom-header-media, .admin-bar.home.blog.has-header-image .custom-header-media, .admin-bar.home.blog.has-header-video .custom-header-media {
  max-height: 512px; }

.main-navigation li li:hover, .main-navigation li li.focus {
  background-color: white; }
  .main-navigation li li:hover a, .main-navigation li li.focus a {
    color: #222222;
    text-decoration: underline; }

@media screen and (min-width: 48em) {
  /* slim down the mailchimp form on desktop */
  form.wcorg-mailchimp {
    max-width: 50%; } }
/* Mailchimp Form */
form.wcorg-mailchimp label,
form.wcorg-mailchimp input[type=submit] {
  margin: 1em 0; }

/* some sponsor logos were huge, lets fix that! */
.single-wcb_sponsor .single-featured-image-header {
  padding: 3em; }

.single-wcb_sponsor .single-featured-image-header img {
  max-width: 28em; }

/* end sponsor logos fix */
/* optional dark theme sponsors fix */
.colors-dark .widget .sponsor-logo a img {
  box-shadow: none; }

#colophon .sponsor-level-title {
  font-size: 35px;
  border-bottom: 1px solid black; }
#colophon .wcb_widget_sponsors .sponsor-level {
  width: 100%;
  margin-bottom: 30px; }
  #colophon .wcb_widget_sponsors .sponsor-level a.sponsor-logo {
    display: inline-block;
    width: 250px; }

.entry-content a, .entry-summary a, .widget a, .site-footer .widget-area a, .posts-navigation a, .widget_authors a strong {
  -webkit-box-shadow: none;
  box-shadow: none;
  -webkit-transition: none;
  transition: none;
  transition: none;
  transition: none; }

.speaker_setup .wcorg-speaker h2 {
  display: none; }
.speaker_setup .wcorg-speaker-description {
  width: 150px;
  display: inline-block;
  float: left;
  margin: 10px; }
  .speaker_setup .wcorg-speaker-description img {
    width: 300px; }
  .speaker_setup .wcorg-speaker-description p, .speaker_setup .wcorg-speaker-description .sharedaddy {
    display: none; }

.wcorg-volunteer-details {
  float: right;
  width: calc( 100% - 120px ); }
  .wcorg-volunteer-details h2 {
    margin-bottom: 5px; }

.wcorg-volunteer-content {
  clear: both; }

.wcpt-schedule td, .wcpt-schedule th {
  border: 1px solid #cccccc;
  position: relative; }
.wcpt-schedule th:first-child, .wcpt-schedule td:first-child {
  padding-left: 5px; }

.wcpt-session-speakers {
  display: block;
  text-align: right;
  font-weight: bold;
  position: absolute;
  bottom: 0px;
  right: 10px; }

.wcpt-session-title {
  display: block;
  padding: 4px; }

td.wcpt-session-type-session, td.wcb-session-opening-remarks, td.wcb-session-keynote {
  vertical-align: top;
  padding: 0px;
  padding-bottom: 30px; }

.wcb-track-development::before,
.wcb-track-community::before,
.wcb-track-marketing::before,
.wcb-track-business::before,
.wcb-track-design::before,
.wcb-track-content::before,
.wcb-track-security::before {
  text-align: center;
  padding: 5px;
  color: white;
  display: block; }

.wcb-track-development::before {
  content: "Development";
  background-color: #009900; }

.wcb-track-community::before {
  content: "Community";
  background-color: #DD7E6B; }

.wcb-track-marketing::before {
  content: "Marketing";
  background-color: #009999; }

.wcb-track-business::before {
  content: "Business";
  background-color: #990099; }

.wcb-track-design::before {
  content: "Design";
  background-color: #990000; }

.wcb-track-content::before {
  content: "Content";
  background-color: #999900; }

.wcb-track-security::before {
  content: "Security";
  background-color: #999900; }

td.wcb-session-ambassador-program {
  padding-bottom: 0px; }

@media screen and (max-width: 500px) {
  .wcpt-schedule td {
    display: block; }
  .wcpt-schedule th {
    display: none; }

  .wcpt-time {
    font-weight: bold;
    background-color: #eeeeee;
    margin-top: 20px; } }

/*# sourceMappingURL=additonal_styles.css.map */

